home-cluster/ai-services/ingressroute-pigallery2.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pigallery2
  namespace: ai-services
  annotations:
    external-dns.alpha.kubernetes.io/hostname: gallery.kube.stevearnett.com
    external-dns.alpha.kubernetes.io/target: kube.stevearnett.com
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`gallery.kube.stevearnett.com`)
      kind: Rule
      services:
        - name: pigallery2
          port: 80
          scheme: http
